# trabalho_jairo

./: README.md  mudarnome.py  mudarnomewhats.py  requirements.txt  verificararq.py
placas/labels/: train.cache  val.cache
placas/labels/train/: 00b73e50-0809-451d-91f6-131b079e1f8d_jpg.rf.d53290b5799f41105cac86870a2c51e2.txt  00f87d4e-1532-462b-8277-39778481ecd3_jpg.rf.61dd1b0955372a125383999219d847af.txt  0a620cc2-c09d-46d1-94d6-4f6a15f0e157_jpg.rf.ba911e766bbd122c799e26d4aa47a9eb.txt  0a8e6782-296d-4ea1-b3be-30fe45949faa_jpg.rf.0210c9267feefc6ea3c5732982458234.txt  0a8e6782-296d-4ea1-b3be-30fe45949faa_jpg.rf.d3c339593d3f785fbe629dfe1b6a852e.txt  0ac23294-449a-44d2-a3fd-f028d78b6a7e_jpg.rf.452081e02efb3bb40b46c6e2f79a8a6c.txt  0ac23294-449a-44d2-a3fd-f028d78b6a7e_jpg.rf.659071fd68b949683bda267541176315.txt  0ac23294-449a-44d2-a3fd-f028d78b6a7e_jpg.rf.dfe94c834c8b6616b53f38f7bad9826c.txt  0b925e6f-9624-4fbb-b402-cfdb31b20892_jpg.rf.755e3b6154f11fd69970d154e3206773.txt  0b925e6f-9624-4fbb-b402-cfdb31b20892_jpg.rf.baca8edfc60659751dbdc2f19118b13e.txt  0b925e6f-9624-4fbb-b402-cfdb31b20892_jpg.rf.e2f94f1a38f639ddec1c72a70d8988c1.txt  0bb5eae6-961b-4d66-be3c-3c7334889f36_jpg.rf.322a21e1e55c65479caa3724186ff696.txt  0be9fd4a-cba3-41ba-b618-1331288380b2_jpg.rf.58b5fd29569ac190e6507812d0892e10.txt  0c4923b4-d26e-4d83-9c3b-79c6d0bb9744_jpg.rf.72d102b01a938b359a1c3c3c8e109bc3.txt  (+261 more)
placas/val/: labels.cache
yolov7/: interface.py  pyproject.toml  streamlit_interface.py
yolov7/data/: placas.yaml
yolov7/yolov7-env/Scripts/: activate  activate.bat
(+386 files in other folders)
