[project]
name = "yolov7"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas Guarnier",email = "lucaszg090@gmail.com"}
]
readme = "README.md"
requires-python = "3.10"
dependencies = [
    "matplotlib (>=3.2.2)",
    "numpy (>=1.18.5,<1.24.0)",
    "opencv-python (>=4.1.1)",
    "pillow (>=7.1.2)",
    "pyyaml (>=5.3.1)",
    "requests (>=2.23.0)",
    "scipy (>=1.4.1)",
    "torch (>=1.7.0,!=1.12.0)",
    "torchvision (>=0.8.1,!=0.13.0)",
    "tqdm (>=4.41.0)",
    "protobuf (<4.21.3)",
    "tensorboard (>=2.4.1)",
    "pandas (>=1.1.4)",
    "seaborn (>=0.11.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "thop (>=0.1.1.post2209072238,<0.2.0)",
    "streamlit (>=1.45.1,<2.0.0)",
    "opencv-python-headless (>=4.8.0,<5.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
